<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Main-->
    <string name="app_name">Habibi Time!</string>
    <string name="flirt">FLIRT</string>
    <string name="meetup">MEETUP</string>
    <string name="mood">MOOD</string>
    <string name="answers">ANSWERS</string>
    <string name="i">I</string>
    <string name="you">You</string>
    <string name="question">Question</string>
    <string name="settings">Settings</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="minimize">Minimize</string>
    <string name="add">Add</string>
    <string name="record">Record</string>
    <string name="play">Play</string>

    <!--Settings-->
    <string name="gender_select_self_title">From Gender:</string>
    <string name="gender_select_habibi_title">To Gender:</string>
    <string name="about_bibi">When in tiny \'bibi\' mode, select the paste to clipboard phrase type:</string>
    <string name="enable_bibi_view">Enable Bibi!</string>
    <string-array name="bibi_paste_selection">
        <item>@string/arabic</item>
        <item>@string/arabizi</item>
    </string-array>
    <string name="bibi_paste_selection"></string>

    <!--Habibi Phrase-->
    <string name="share_using">Share using…</string>
    <string name="copied">Copied to Clipboard!</string>
    <string name="arabic">Arabic</string>
    <string name="phonetic">Phonetic</string>
    <string name="arabizi">Arabizi</string>
    <string name="english">English</string>
    <string name="to_gender">To Gender:</string>
    <string name="sound">Sound:</string>
    <string name="savePhrase">Save</string>

    <!--Add Habibi Phrase-->
    <string name="addPhrase">Add Phrase</string>
    <string name="category">Category</string>
    <string name="copyMaleToMale">Add M->M</string>
    <string name="copyFemaleToFemale">Add F->F</string>
    <string name="addNoGender">No Gender</string>

    <!--Installation-->
    <string name="select_from_gender_title">Please select your gender:</string>
    <string name="select_to_gender_title">Now select your habibi\'s gender:</string>
    <string name="subtitle">This is to conjugate your phrases. You can change this later.</string>
    <string name="bibi">Bibi</string>

</resources>
