<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/first_categories_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Flirt"
        android:text="@string/flirt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/Meetup"
        android:text="@string/meetup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/Mood"
        android:text="@string/mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/Answer"
        android:text="@string/answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
