<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fromGenderToGenderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/H4"/>

    <!--Arabic-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/arabicTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arabic"
            style="@style/H6"/>

        <EditText
            android:id="@+id/arabicEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            style="@style/H5"/>
    </LinearLayout>

    <!--Phonetic-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/phoneticTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonetic"
            style="@style/H6"/>

        <EditText
            android:id="@+id/phoneticEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            style="@style/H5"/>
    </LinearLayout>

    <!--Arabizi-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/arabiziTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arabizi"
            style="@style/H6"/>

        <EditText
            android:id="@+id/arabiziEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            style="@style/H6"/>
    </LinearLayout>

    <!--Play / Record-->
    <LinearLayout
        android:id="@+id/soundRecordViewGroup"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/single_space">

        <Button
            android:id="@+id/play_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"/>

        <Button
            android:id="@+id/record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record"/>
    </LinearLayout>


</LinearLayout>