<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/double_space"
    android:gravity="center">

    <TextView
        android:id="@+id/from_gender_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_from_gender_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/install_text_size"/>
    <LinearLayout
        android:id="@+id/gender_select_self_linear_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/triple_space">

        <ImageView
            android:id="@+id/gender_select_self_m_image_view"
            android:layout_width="@dimen/installation_gender_icon_width"
            android:layout_height="@dimen/installation_gender_icon_width"
            android:src="@drawable/gender_male"/>

        <ImageView
            android:id="@+id/gender_select_self_f_image_view"
            android:layout_width="@dimen/installation_gender_icon_width"
            android:layout_height="@dimen/installation_gender_icon_width"
            android:layout_marginLeft="@dimen/triple_space"
            android:src="@drawable/gender_female"/>
    </LinearLayout>

    <TextView
        android:id="@+id/to_gender_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_to_gender_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/install_text_size"/>
    <LinearLayout
        android:id="@+id/to_gender_select_self_linear_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/triple_space">

        <ImageView
            android:id="@+id/gender_select_habibi_m_image_view"
            android:layout_width="@dimen/installation_gender_icon_width"
            android:layout_height="@dimen/installation_gender_icon_width"
            android:src="@drawable/gender_male"/>

        <ImageView
            android:id="@+id/gender_select_habibi_f_image_view"
            android:layout_width="@dimen/installation_gender_icon_width"
            android:layout_height="@dimen/installation_gender_icon_width"
            android:layout_marginLeft="@dimen/triple_space"
            android:src="@drawable/gender_female"/>
    </LinearLayout>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/quadruple_space"
        android:text="@string/subtitle"
        android:textColor="@android:color/black"
        android:textSize="@dimen/install_subtitle_text_size"/>


</LinearLayout>